-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
ALL
-
Sharding 2021-10-18
-
29
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Static assertion that AtomicWord is integral is backwards. In this code:
MONGO_STATIC_ASSERT(!std::is_integral<T>::value ||
sizeof(T) == sizeof(atomic_word_detail::Base<T>));
should be `std::is_integral<T>::value`. Fortunately everything still compiles with that fix, at least on Intel.
However, instead I'm removing this assertion all together and replacing with TODO from a while back to implement `std::atomic<WordType>::is_always_lock_free` assertion.