SERVER-60390 Make AtomicWord assert is_always_lock_free